--- a/static/ajax-solr/publications.html
+++ b/static/ajax-solr/publications.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="css/semflow.css" media="screen" /> 
   <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script-->
 <script type="text/javascript" src="ext/jquery-1.4.2.min.js"></script>  
-  <script type="text/javascript" src="js/semflow.js"></script> 
+  <script type="text/javascript" src="js/semflow-static.js"></script> 
   <script type="text/javascript" src="ajax-solr/core/Core.js"></script>
   <script type="text/javascript" src="ajax-solr/core/AbstractManager.js"></script>
   <script type="text/javascript" src="ajax-solr/managers/Manager.jquery.js"></script>
