Remove paper type facet; goes with https://github.com/DougBurke/semflow/commit/d6af8bb1332446370da4546eed6c974a82ccc38d

--- a/static/ajax-solr/publications.html
+++ b/static/ajax-solr/publications.html
@@ -99,8 +99,10 @@
       <h2>Top Authors</h2> 
       <div class="tagcloud" id="author"></div>
       
+      <!-- Doug has taken out paper types for now
       <h2>Paper Types</h2> 
       <div class="tagcloud" id="papertype"></div>
+      -->
       
       <h2>Year of Publication</h2>
       <div id="pubyear"></div>
