Clean up of YearWidgetTwo to YearWidget

--- a/static/ajax-solr/publications.html
+++ b/static/ajax-solr/publications.html
@@ -25,8 +25,8 @@
   <link rel="stylesheet" type="text/css" href="ext/jquery.autocomplete.css" media="screen" />
   <script type="text/javascript" src="ext/jquery.autocomplete.js"></script>
   <script type="text/javascript" src="widgets/AutocompleteWidget.js"></script>
-  <script type="text/javascript" src="widgets/YearWidgetTwo.js"></script>
   <script type="text/javascript" src="widgets/DualSlider.js"></script>
+  <script type="text/javascript" src="widgets/YearWidget.js"></script>
   <script type="text/javascript" src="js/date.js"></script>
     <script type="text/javascript" src="js/time.js"></script>
   <script type="text/javascript" src="widgets/DateRanger.js"></script>
