--- a/static/ajax-solr/hiddenform.html
+++ b/static/ajax-solr/hiddenform.html
@@ -13,8 +13,9 @@ $(document).ready(function()
 //code to grab a form with all the content from the parent page 
 var form_html = parent.$("#tempform").html();
 $("#tmp").append(form_html);
+console.log("---",$('#tmp').html());
 parent.$("#tempform").remove();
-
+console.log("In Frame");
 $("#tempformsubmit").click();
 });
 </script>
