chandra non ra bug (which seemed like text bug, metrics bug due to not unbinding, and other stuff like null bug and collabs for non users are fixed

--- a/static/ajax-solr/hiddenform.html
+++ b/static/ajax-solr/hiddenform.html
@@ -13,9 +13,9 @@ $(document).ready(function()
 //code to grab a form with all the content from the parent page 
 var form_html = parent.$("#tempform").html();
 $("#tmp").append(form_html);
-console.log("---",$('#tmp').html());
+//console.log("---",$('#tmp').html());
 parent.$("#tempform").remove();
-console.log("In Frame");
+//console.log("In Frame");
 $("#tempformsubmit").click();
 });
 </script>
