only two place to set semantic vs semantic2, hiddenform, and config.coffee

--- a/static/ajax-solr/hiddenform.html
+++ b/static/ajax-solr/hiddenform.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Network post input</title>
-<script type="text/javascript" src="/semantic2/alpha/static"+"/ext/jquery-1.4.2.min.js"></script>
+<script type="text/javascript" src="/semantic2/alpha/static/ext/jquery-1.4.2.min.js"></script>
 </head>
 <body>
 <div id="tmp" style="display:none;"></div>
